# EDDS1_PRACTICA1_2026

./: CMakeLists.txt  README.md  TADS UNO (3).drawio  UNO.drawio
CPPs/: Carta.cpp  JuegoUNO.cpp  Jugador.cpp  ListaJugadores.cpp  Mano.cpp  Mazo.cpp  NodoCarta.cpp  NodoJugador.cpp  Reglas.cpp
TADS/: Carta.h  JuegoUNO.h  Jugador.h  ListaJugadores.h  Mano.h  Mazo.h  NodoCarta.h  NodoJugador.h  Reglas.h
include/TADS/: Carta.h  CartaAccion.h  CartaComodin.h  CartaFlip.h  CartaFlipSpecial.h  CartaNumero.h  CartaX.h  CartaY.h  JuegoUNO.h  Jugador.h  ListaJugadores.h  Mano.h  Mazo.h  Menu.h  NodoCarta.h  NodoJugador.h  Reglas.h  VistaCarta.h
src/CPPs/: Carta.cpp  CartaAccion.cpp  CartaComodin.cpp  CartaFlip.cpp  CartaNumero.cpp  JuegoUNO.cpp  Jugador.cpp  ListaJugadores.cpp  Mano.cpp  Mazo.cpp  Menu.cpp  NodoCarta.cpp  NodoJugador.cpp  main.cpp
src/collections/: ListaJugadores.cpp  NodoCarta.cpp
src/game/: CadenaRoboManager.cpp  CadenaRoboManager.h  JuegoUNO.cpp  RoboManager.cpp  RoboManager.h  TurnoManager.cpp  TurnoManager.h
src/models/: CartaAccion.cpp  CartaComodin.cpp  CartaFlip.cpp  CartaFlipSpecial.cpp  CartaNumero.cpp  CartaX.cpp  CartaY.cpp  Jugador.cpp  Mano.cpp  Mazo.cpp  Reglas.cpp  VistaCarta.cpp
src/utils/: Colores.cpp  Colores.h  InputUtils.cpp  InputUtils.h
